Fixed gap between hero and about

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -8,6 +8,7 @@
         padding: var(--sectionPadding);
         /* 100px - 200px */
         padding-bottom: clamp(6.25rem, 8vw, 12.5rem);
+        padding-top: clamp(1.5rem, 4vw, 4rem);
         /* clips anything overflowing */
         overflow: hidden;
         position: relative;
@@ -203,7 +204,7 @@
             }
         }
     }
-}
+}                            
 
 /*-- -------------------------- -->
 <---   Side By Side Reverse     -->
